--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "cropperjs": "^1.6.2",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "form-data": "^4.0.5",
         "https-proxy-agent": "^7.0.6",
         "lucide": "^0.563.0",
         "marked": "^17.0.1",
